# fhe

./: .gitignore  .gitmodules  README.md
code/: CMakeLists.txt
code/include/fhenn/: fhenn.h
code/src/: fhenn.cpp  main.cpp
code/src/tests/: fhenn.cpp
heir/: example.py  requirements.txt
nn_from_scratch/: CMakeLists.txt  README.md
nn_from_scratch/include/: nn.h  nn_fhe.h  nn_pure.h
nn_from_scratch/scripts/: mytest.py  process.py
nn_from_scratch/src/: example  example.cpp  main.cpp  main_fhe.cpp  main_pure.cpp  nn_pure.cpp
nn_from_scratch/src/examples/: example2.cpp  mine.cpp  nn.cpp
nn_from_scratch/src/nn/: nn_classes.cpp  nn_functionals.cpp
nn_from_scratch/src/nn_fhe/: nn_classes.cpp  nn_functionals.cpp
